[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 600.0
margin_top = 200.0
margin_right = 741.0
margin_bottom = 230.0
text = "Warcaby
"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 487.0
margin_top = 266.0
margin_right = 537.0
margin_bottom = 334.0

[node name="White" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 20.0
text = "White"

[node name="Black" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0
text = "Black"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 250.0
margin_bottom = 68.0
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Black" to="." method="_on_Black_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
